glibc (2.24-11+deb9u3pexip1) pexip; urgency=medium

  * Migrate to Stretch

 -- John-Mark Bell <jmb@pexip.com>  Wed, 11 Jul 2018 15:41:57 +0100

glibc (2.24-11+deb9u3) stretch; urgency=medium

  [ Aurelien Jarno ]
  * debian/rules.d/debhelper.mk: install the libc-otherbuild postinst and
    postrm in the libc6-i686 transitional package, to make sure
    /etc/ld.so.nohwcap is correctly removed after an upgrade.  Closes:
    #883394.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 14 Jan 2018 11:39:44 +0100

glibc (2.24-11+deb9u2) stretch; urgency=medium

  [ Aurelien Jarno ]
  * debian/control.in/x32: Add a gcc-multilib Recommends for libc6-dev-x32.
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - debian/patches/any/submitted-perl-inc.diff: drop, merged upstream.
    - debian/patches/any/cvs-remove-pid-tid-cache-clone.diff: drop, merged
      upstream.
    - debian/patches/any/local-CVE-2017-1000366-rtld-LD_LIBRARY_PATH.diff:
      drop, merged upstream.
    - debian/patches/any/local-CVE-2017-1000366-rtld-LD_PRELOAD.diff: drop,
      merged upstream.
    - debian/patches/any/local-CVE-2017-1000366-rtld-LD_AUDIT.diff: drop,
      merged upstream.
    - debian/patches/any/cvs-vectorized-strcspn-guards.diff: drop, merged
      upstream.
    - debian/patches/any/cvs-hwcap-AT_SECURE.diff: drop, merged upstream.
    - Avoid use-after-free read access in clntudp_call (CVE-2017-12133).
      Closes: #870648.
    - Fix compatibility with Intel C++ __regcall calling convention.  Closes:
      #881850.
    - Fix a buffer overrun in rpcgen.
    - Fix strlen on null pointer in nss_nisplus.
    - Fix invalid cast in group merging affecting ppc64 and s390x.
    - Define collation for Malayalam chillu characters.
    - Correct collation of U+0D36 and U+0D37 Malayalam characters.
  * debian/script.in/nohwcap.sh: always check for all optimized packages
    as multiarch allows one to install foreign architectures.  Closes:
    #882272.
