@@ -4,14 +4,14 @@ index 7156b4f..0584832 100644
 +++ b/misc/syslog.c
 @@ -328,7 +328,7 @@ __vsyslog(int pri, const char *fmt, va_list ap)
  ldbl_hidden_def (__vsyslog, vsyslog)
- ldbl_strong_alias (__vsyslog, vsyslog)
+ ldbl_weak_alias (__vsyslog, vsyslog)
  
 -static struct sockaddr_un SyslogAddr;	/* AF_UNIX address of local logger */
 +static struct sockaddr_in SyslogAddr;	/* AF_INET address of local logger */
  
  
  static void
-@@ -341,68 +341,55 @@ openlog_internal(const char *ident, int logstat, int logfac)
+@@ -341,41 +341,28 @@ openlog_internal(const char *ident, int logstat, int logfac)
  	if (logfac != 0 && (logfac &~ LOG_FACMASK) == 0)
  		LogFacility = logfac;
  
@@ -22,57 +22,17 @@ index 7156b4f..0584832 100644
 -			(void)strncpy(SyslogAddr.sun_path, _PATH_LOG,
 -				      sizeof(SyslogAddr.sun_path));
 -			if (LogStat & LOG_NDELAY) {
+-			  LogFile = __socket(AF_UNIX, LogType | SOCK_CLOEXEC, 0);
+-			  if (LogFile == -1)
+-			    return;
 +	if (LogFile == -1) {
 +		SyslogAddr.sin_family = AF_INET;
 +		SyslogAddr.sin_port = htons(514);
 +		SyslogAddr.sin_addr.s_addr = htonl(INADDR_LOOPBACK);
 +		if (LogStat & LOG_NDELAY) {
- #ifdef SOCK_CLOEXEC
- # ifndef __ASSUME_SOCK_CLOEXEC
--				if (__have_sock_cloexec >= 0) {
-+			if (__have_sock_cloexec >= 0) {
- # endif
--					LogFile = __socket(AF_UNIX,
--							   LogType
--							   | SOCK_CLOEXEC, 0);
-+				LogFile = __socket(AF_INET,
-+						   LogType
-+						   | SOCK_CLOEXEC, 0);
- # ifndef __ASSUME_SOCK_CLOEXEC
--					if (__have_sock_cloexec == 0)
--						__have_sock_cloexec
--						  = ((LogFile != -1
--						      || errno != EINVAL)
--						     ? 1 : -1);
--				}
-+				if (__have_sock_cloexec == 0)
-+					__have_sock_cloexec
-+					  = ((LogFile != -1
-+					      || errno != EINVAL)
-+					     ? 1 : -1);
-+			}
- # endif
- #endif
- #ifndef __ASSUME_SOCK_CLOEXEC
- # ifdef SOCK_CLOEXEC
--				if (__have_sock_cloexec < 0)
-+			if (__have_sock_cloexec < 0)
- # endif
--				  LogFile = __socket(AF_UNIX, LogType, 0);
-+			  LogFile = __socket(AF_INET, LogType, 0);
- #endif
--				if (LogFile == -1)
--					return;
++			LogFile = __socket(AF_INET, LogType | SOCK_CLOEXEC, 0);
 +			if (LogFile == -1)
 +				return;
- #ifndef __ASSUME_SOCK_CLOEXEC
- # ifdef SOCK_CLOEXEC
--				if (__have_sock_cloexec < 0)
-+			if (__have_sock_cloexec < 0)
- # endif
--					__fcntl(LogFile, F_SETFD, FD_CLOEXEC);
-+				__fcntl(LogFile, F_SETFD, FD_CLOEXEC);
- #endif
 -			}
  		}
 -		if (LogFile != -1 && !connected)
